--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,3 +37,26 @@
     background-size:  cover;
     background-color: #999;
 }
+
+#topBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: red;
+  color: white;
+  cursor: pointer;
+  height: 60px;
+  width: 60px;
+  padding: 15px;
+  border-radius: 50%;
+  opacity: .5;
+}
+
+#topBtn:hover {
+  background-color: #555;
+}
